clusters/managed/default/task/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    gethomepage.dev/app: vikunja
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Applications
    gethomepage.dev/href: https://tasks.trusted.nirmalhk7.com
    gethomepage.dev/icon: vikunja
    gethomepage.dev/name: Tasks
    gethomepage.dev/widget.enableTaskList: "true"
    gethomepage.dev/widget.key: ${VIKUNJA_API_TOKEN}
    gethomepage.dev/widget.type: vikunja
    gethomepage.dev/widget.url: https://tasks.trusted.nirmalhk7.com
  name: vikunja
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: "Host(`tasks.trusted.nirmalhk7.com`)"
      kind: Rule
      services:
        - name: vikunja
          port: 3456
      middlewares:
        # - name: mgd-https
        - name: mgd-ratelimit
        - name: mgd-headervalidation
